Thu Jun  7 10:41:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/ParsedString.cc (get), htsearch/Display.cc (expandVariables):
	Use isalnum() instead of isalpha() to allow digits in attribute and
	variable names, allow '-' in variable names too for consistency.

Wed Jun  6 17:13:49 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag): Make parsing of meta robots tag case
	insensitive.

Wed Jun  6 15:31:00 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/doc2html/DETAILS, contrib/doc2html/README,
	contrib/doc2html/doc2html.cfg, contrib/doc2html/doc2html.sty,
	contrib/doc2html/doc2html.pl, contrib/doc2html/pdf2html.pl,
	contrib/doc2html/swf2html.pl: Added version 3.0 of doc2html,
	contributed by David Adams <D.J.Adams@soton.ac.uk>.

Mon Jun 4 10:31:45 CEST 2001 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htdoc/cf_byname.html: I forgot to insert the 'restrict' attribute.

Wed May 30 11:30:43 CEST 2001 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htsearch/htsearch.cc: two new attributes, used by htsearch, have
        been added: restrict and exclude. They can now give more control
        to template customisation through configuration files, allowing
        to restrict or exclude URLs from search without passing
        any CGI variables (although this specification overrides the
        configuration one).
	* htcommon/defaults.cc: ditto
	* htdoc/attrs.html: ditto
	* htdoc/cf_byname.html: ditto
	* htdoc/cf_byprog.html: ditto
	* htdoc/hts_form.html: ditto

Sat May  5 21:43:32 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in, configure: Add tests for wait.h, sys/wait.h,
	mkstemp() and malloc.h.

	* acconfig.h, include/htconfig.h.in: Update with autoheader for
	new tests.

	* htlib/regex.[h,c]: Update with backports from 3.2.0b4 development.

Tue Feb 29 23:04:04 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
